bases/nexus-campaign-webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-campaign-webapp-service
  labels:
    app: nexus-campaign-webapp
spec:
  type: ClusterIP
  selector:
    app: nexus-campaign-webapp
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
